--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -339,13 +339,23 @@ tr {
     display: flex;
     align-items: stretch;
 }
+.students td{
+    width: 15%;
+}
 
+
+.student th:first-child, td:first-child {
+    width: 60%;
+}
+.student th:last-child, td:last-child {
+    width: 25%;
+}
 
 th:first-child, td:first-child {
-    width: 80%;
+    width: 70%;
 }
 th:last-child, td:last-child {
-    width: 20%;
+    width: 30%;
 }
 
 
@@ -468,7 +478,6 @@ th, td {
     padding: 20px 20px;
     text-align: left;
     color: #855858;
-    /* width: 200px; */
 }
 
 .student-link{
