--- a/templates/port-add-item.html
+++ b/templates/port-add-item.html
@@ -11,7 +11,7 @@
                     <option value="Региональный">Региональный</option>
                     <option value="Всероссийский">Всероссийский</option>
                     <option value="Международный">Международный</option>
-                    <option value="meow">Другое</option>
+                    <option value="Другое">Другое</option>
                 </select>
             </div>
             <div>
@@ -45,7 +45,7 @@
 
 
             <div>
-                <button class="button-3">ыаа</button>
+                <button class="button-3">Добавить</button>
             </div>
         </form>
     </section>
