--- a/templates/base.html
+++ b/templates/base.html
@@ -11,12 +11,10 @@
     <a href={{url_for('index')}} class="link-a">Главная</a>
     <a href={{url_for('info')}} class="link-a">Информация</a>
     <a href="https://thl-syktyvkar.gosuslugi.ru/" class="link-a" target="_blank">Сайт школы</a>
-    {% if "teacher_id" in session %}
-        <a href={{url_for("logout")}} class="link-a">{{(session["login"])[ :session["login"].rfind(" ")]}}<br>(Выйти)</a>
-    {% elif "student_id" in session %}
-        <a href={{url_for("logout")}} class="link-a">{{(session["login"])[ :session["login"].rfind(" ")]}}<br>(Выйти)</a>
-    {% else %}
+    {% if "teacher_id" not in session and "student_id" not in session %}
         <a class="link-a">Вход не выполнен</a>
+    {% else %}
+        <a href={{url_for("logout")}} class="link-a">{{(session["name"])[ :session["name"].rfind(" ")]}}<br>(Выйти)</a>
     {% endif %}
 </header>
 {% block content %}
