--- a/templates/base.html
+++ b/templates/base.html
@@ -20,5 +20,6 @@
 {% block content %}
 
 {% endblock %}
+<script src="{{url_for('static', filename='scripts/sort-doc.js')}}"></script>
 </body>
 </html>
