--- a/templates/port-add-item.html
+++ b/templates/port-add-item.html
@@ -21,7 +21,7 @@
                 <input class="login" type="text" placeholder="Название" name="name">
             </div>
             <div>
-                <input class="login" type="text" placeholder="Дата(формат ДД.ММ.ГГГГ)" name="date">
+                <input type="login" id="start" name="trip-start" value="2023-05-04" min="2000-01-01" max="2023-12-31">
             </div>
             <input class="login" type="text" placeholder="Результат(победа, участие, место и т.д.)" name="result">
             </div>
