update logic work

--- a/templates/information.html
+++ b/templates/information.html
@@ -4,15 +4,15 @@
         <div class="container">
             <p class="header-txt"><strong>Информация о сайте</strong></p>
             <div class="abt-sait">
-                <p class="txt-inf">Сайт сделан в 2023 году<br> Над данным проектом работали:</p>
+                <p class="txt-inf">Сайт разработан в 2023 году<br> Над реализацией проекта работали:</p>
             </div>
             <div class="abt-sait abt-auther">
-                <img src="img/marina-photo.jpeg" alt="Marina" class="auther-photo">
-                <p class="txt-abt">Бордюг Марина, <br>ученица Технологического лицея, <br> ответственная за frountend</p>
+                <img src={{url_for('static', filename='img/marina-photo.png')}} alt="Marina" class="auther-photo">
+                <p class="txt-abt">Бордюг Марина, <br>ученица Технологического лицея, <br> ответственная за frontend</p>
             </div>
             <div class="abt-sait abt-auther">
-                <img src="img/marina-photo.jpeg" alt="Marina" class="auther-photo">
-                <p class="txt-abt">Бордюг Марина, <br>ученица Технологического лицея, <br> ответственная за frountend</p>
+                <img src={{url_for('static', filename='img/kirill-photo.jpg')}} alt="Kirill" class="auther-photo">
+                <p class="txt-abt">Беляев Кирилл, <br>Ученик ЦЦОД "IT-CUBE", <br> ответственный за backend</p>
             </div>
         </div>
     </section>
