add a new class

--- a/templates/classes.html
+++ b/templates/classes.html
@@ -18,7 +18,7 @@
                 />
             {% endif %}
 
-                    <form action="" enctype="multipart/form-data" method="post">
+                    <form class="form-add-avatar" action="" enctype="multipart/form-data" method="post">
                         <div class="upload-avatar__wrapper">
                             <input type="file"
                                    name="file"
