--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <a href={{url_for('info')}} class="link-a">Информация</a>
     <a href="https://thl-syktyvkar.gosuslugi.ru/" class="link-a" target="_blank">Сайт школы</a>
     {% if "teacher_id" not in session and "student_id" not in session %}
-        <a class="link-a">Вход не выполнен</a>
+        <p class="header-nav-text">Вход не выполнен</p>
     {% else %}
         <a href={{url_for("logout")}} class="link-a">{{(session["name"])[ :session["name"].rfind(" ")]}}<br>(Выйти)</a>
     {% endif %}
