added data sort

--- a/templates/student-profile.html
+++ b/templates/student-profile.html
@@ -156,11 +156,11 @@
           <table class="marks-2">
             <thead>
               <tr>
-                <th class="th-2">Уровень</th>
-                <th class="th-2">Предмет</th>
-                <th class="th-2">Название</th>
-                <th class="th-2">Дата</th>
-                <th class="th-2">Результаты</th>
+                <th class="th-2" data-sort="up">Уровень</th>
+                <th class="th-2" data-sort="up">Предмет</th>
+                <th class="th-2" data-sort="up">Название</th>
+                <th class="th-2" data-sort="up">Дата</th>
+                <th class="th-2" data-sort="up">Результаты</th>
               </tr>
             </thead>
             <tbody>
