--- a/templates/classes.html
+++ b/templates/classes.html
@@ -64,7 +64,7 @@
                         {% endfor %}
                     </tbody>
                 </table>
-                <a href={{url_for("add_student")}} class="button-plus"><strong>+</strong></a>
+                <a href={{url_for("settings")}} class="button-plus"><strong>управление</strong></a>
             </div>
         </div>
     </section>
