--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{{title}}</title>
     <link rel="stylesheet" href={{url_for('static', filename='css/normalize.css')}}>
     <link rel="stylesheet" href={{url_for('static', filename='css/styles.css')}}>
 </head>
