--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,12 @@
             <p class="tittle"><strong>Сайт для облачного<br> хранения портфолио<br> школьников</strong></strong></p>
             <div class="main-buttons">
                 <a href={{url_for('teacher_login')}} class="button button-pink"><strong>Войти как<br> учитель</strong></a>
-                <a href={{url_for('student_login')}} class="button button-yellow"><strong>Войти как<br> ученик</strong></a>
+                <a href={{url_for('student_login')}} class="button button-yellow"><strong>Войти как<br> ученик</strong></a>\
             </div>
+<!--            <div class="main-buttons" style="margin-top: -70px">-->
+<!--                <a href={{url_for('student_registration')}} class="button button-pink" style="padding-left: 5px"><strong>Зарегистрироваться как<br> учитель</strong></a>-->
+<!--                <a href={{url_for('student_login')}} class="button button-yellow" style="padding-left: 5px"><strong>Зарегистрироваться как<br> ученик</strong></a>-->
+<!--            </div>-->
         </div>
     </section>
 
