--- a/templates/classes.html
+++ b/templates/classes.html
@@ -6,7 +6,7 @@
         <div class="container teacher-profile">
             <div class="profile">
 
-            {% if avatar %}
+            {% if teacher.avatar %}
                 <img src={{url_for('user_avatar')}}
                      alt="avatar-1"
                      class="avatar-2"
