--- a/templates/student-profile.html
+++ b/templates/student-profile.html
@@ -5,7 +5,7 @@
       <h2 class="header-page">Результаты промежуточной аттестации</h2>
       <div class="student-card">
         <div class="student-info">
-          {% if avatar %}
+          {% if student.avatar %}
                 <img src={{url_for('user_avatar')}}
                      alt="avatar-1"
                      class="avatar-2"
@@ -70,7 +70,7 @@
                           {% for mark in range(1, 6) %}
                             {% if mark == exams[i-1].mark %}
                               <option value={{mark}} selected>{{mark}}</option>
-                            {% elif exams[i - 1].mark == None %}
+                            {% elif mark == None %}
                               <option value="" selected disabled></option>
                             {% else %}
                               <option value={{mark}}>{{mark}}</option>
@@ -82,11 +82,11 @@
 
                       <td>
                         <select name="exam{{i}}">
-                          {% for subject in range(19) %}
+                          {% for index in range(19) %}
                             {% if subject == i - 1 %}
-                              <option value={{subjects[subject]}} selected> {{subjects[subject]}}</option>
+                              <option value={{subjects[index]}} selected> {{subjects[index]}}</option>
                             {% else %}
-                              <option value={{subjects[subject]}}> {{subjects[subject]}}</option>
+                              <option value={{subjects[index]}}> {{subjects[index]}}</option>
                             {% endif %}
                           {% endfor %}
                         </select>
