--- a/templates/student-profile.html
+++ b/templates/student-profile.html
@@ -20,26 +20,29 @@
 
           <p class="port-text">{{ student.name }}</p>
           <p class="port-text">Класс: {{ student.group }}</p>
-          <form action="" enctype="multipart/form-data" method="post">
-                    <div class="upload-avatar__wrapper">
-                        <input type="file"
-                               name="file"
-                                id="upload-file__input_1"
-                                class="upload-file__input"
-                                accept=".jpeg, .png"
-                        />
-                        <label class="upload-file__label" for="upload-file__input_1">
-                            <svg class="upload-file__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                                <path d="M286 384h-80c-14.2 1-23-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c11.6 11.6 3.7 33.1-13.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-23-23V366c0-13.3 10.7-24 24-24h136v8c0 31 24.3 56 56 56h80c30.9 0 55-26.1 57-55v-8h135c13.3 0 24 10.6 24 24zm-124 88c0-11-9-20-19-20s-19 9-20 20 9 19 20 20 21-9 20-20zm64 0c0-12-9-20-20-20s-20 9-19 20 9 20 20 20 21-9 20-20z"></path>
-                            </svg>
-                            <span class="upload-file__text">Выбрать файл</span>
-                        </label>
-                    </div>
-                    <div>
-                        <button class="button-4">поменять аватар</button>
-                    </div>
-                </form>
+          {% if "student_id" in session %}
+            <form action="" enctype="multipart/form-data" method="post">
+                      <div class="upload-avatar__wrapper">
+                          <input type="file"
+                                 name="file"
+                                  id="upload-file__input_1"
+                                  class="upload-file__input"
+                                  accept=".jpeg, .png"
+                          />
+                          <label class="upload-file__label" for="upload-file__input_1">
+                              <svg class="upload-file__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                  <path d="M286 384h-80c-14.2 1-23-10.7-24-24V192h-87.7c-17.8 0-26.7-21.5-14.1-34.1L242.3 5.7c7.5-7.5 19.8-7.5 27.3 0l152.2 152.2c11.6 11.6 3.7 33.1-13.1 34.1H320v168c0 13.3-10.7 24-24 24zm216-8v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-23-23V366c0-13.3 10.7-24 24-24h136v8c0 31 24.3 56 56 56h80c30.9 0 55-26.1 57-55v-8h135c13.3 0 24 10.6 24 24zm-124 88c0-11-9-20-19-20s-19 9-20 20 9 19 20 20 21-9 20-20zm64 0c0-12-9-20-20-20s-20 9-19 20 9 20 20 20 21-9 20-20z"></path>
+                              </svg>
+                              <span class="upload-file__text">Выбрать файл</span>
+                          </label>
+                      </div>
+                      <div>
+                          <button class="button-4">поменять аватар</button>
+                      </div>
+            </form>
+          {% endif %}
         </div>
+
 
         <form class="student-table" method="post">
           <table class="marks">
@@ -58,9 +61,9 @@
                         <select name="exam{{i}}">
                           {% for index in range(19) %}
                             {% if subjects[index] == exams[i-1].subject %}
-                              <option value={{subjects[index]}} selected> {{subjects[index]}}</option>
+                              <option value='{{subjects[index]}}' selected> {{subjects[index]}}</option>
                             {% else %}
-                              <option value={{subjects[index]}}> {{subjects[index]}}</option>
+                              <option value='{{subjects[index]}}'> {{subjects[index]}}</option>
                             {% endif %}
                           {% endfor %}
                         </select>
