--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -356,7 +356,7 @@ input::placeholder {
 
 .students {
     background-color: #FFFFFF;
-    width: 530px;
+    width: 600px;
 }
 
 .students-settings {
@@ -554,7 +554,10 @@ th, td {
     color: #855858;
 }
 
-
+.student-class {
+    font-size: 25px;
+    text-align: center;
+}
 
 tr:hover {
     background-color: #f5f5f5;
