--- a/templates/classes.html
+++ b/templates/classes.html
@@ -51,15 +51,13 @@
                         <tr>
                             <th>ФИО</th>
                             <th>Класс</th>
-                            <th>пароль</th>
                         </tr>
                     </thead>
                     <tbody class="students-list">
                         {% for student in students %}
                         <tr>
                             <td><a class="student-link" href="/profile/{{student.id}}">{{student.name}}</a></td>
-                            <td>{{student.group}}</td>
-                            <td>{{student.password}}</td>
+                            <td class="student-class">{{student.group}}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
